@@ -23,6 +23,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2010-11-19 [O] Adjusted/added maxlength parameter for album title/keyword according to database types (thread ID 67671) {eenemeenemuu}
 2010-11-19 [O] Consistent use of plugin hook types 'action' and 'filter' (thread ID 67630) {eenemeenemuu}
 2010-11-16 [B] Fixed ownership of albums created with xp publisher {Nibbler}
 2010-11-15 [B] Add anonymous group if it doesn't exist (thread ID 67137) {eenemeenemuu}
